--- a/PresentationLayer/Forms/ProductosCU.resx
+++ b/PresentationLayer/Forms/ProductosCU.resx
@@ -123,48 +123,67 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="panelMenu.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAhwAAAHCCAYAAACkIhC+AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAh+SURBVHhe7dohbhQBGIbhlZjuYDojW9fOIkBWIpEcAYms
-        5AZIZCVHQFYikRyhR6hEwg4d0wYSSvtWPU/yJftP9gBvZncDAPCkDsbTs+20+7Idd1fDtPtpZmZmdp8t
-        DfG7JQ53b9a8uG0YT8/3X/w2jPPbYTo5Xh8DAPyzpSFuWmK+3HfFxfr4xjC9eL0vkq/rCQDwYNtx/ryP
-        jnfruQTHfPnXVx8AAP9hONy92k7z9/XcF8g0Xw/Dy+frCQDwKJb/dawf7xwAAI9EcAAAOcEBAOQEBwCQ
-        ExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5
-        wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJAT
-        HABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnB
-        AQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMc
-        AEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEB
-        AOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwA
-        QE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA
-        5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABA
-        TnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDk
-        BAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBO
-        cAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQE
-        BwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5w
-        AAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQH
-        AJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAA
-        ADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcA
-        kBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAA
-        OcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQ
-        ExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5
-        wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJAT
-        HABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnB
-        AQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMc
-        AEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEB
-        AOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwA
-        QE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA
-        5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABA
-        TnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDk
-        BAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBO
-        cAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQE
-        BwCQExwAQE5wAAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5w
-        AAA5wQEA5AQHAJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAA5wQEA5AQH
-        AJATHABATnAAADnBAQDkBAcAkBMcAEBOcAAAOcEBAOQEBwCQExwAQE5wAAC528Ex7n5sjo6erScAwKO4
-        +4bj28F4eraeAAAPNkwnx9txd7Wem812nN/vo+NiPQEAHmwYT8+30+7Tet4YpvlyGOePw/Dy+foIAODe
-        lpZYYmP5BeWPf9nYV8iH7TRfL7+3mJmZmf3PlpZY3mx4iQEAPKHN5hcNzwp4h182RwAAAABJRU5ErkJg
-        gg==
+        iVBORw0KGgoAAAANSUhEUgAAAs8AAAHCCAYAAAAQBCT0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAmUSURBVHhe7dohbhRxHIbhlRh2MJ2RxdFZBMhKJJIjIJGV
+        3ACJrOQIyEokkiNwBCQSduhf0AaSF+w+T/Il+5vsAd5MZgcAAPyHh/PF5X45fNzPh6/TcvhhZmZmZnaK
+        23r4VxefHV6OVL5rmi+ujn/8PM3rq2l58ng8BgCAk7P18G0XrzfHRr4ej29Ny9MXx7r+NE4AAGDYz+uH
+        Y0C/HucWz+vNX19JAwDACZvODs/3y/plnMeaXtZv0/Ts0TgBAIDfbN9Bj5/3DgAA4A7xDAAAkXgGAIBI
+        PAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQz
+        AABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMA
+        QCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE
+        4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSe
+        AQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkA
+        ACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAg
+        Es8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLx
+        DAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8A
+        ABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAA
+        kXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJ
+        ZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgG
+        AIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAA
+        iMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBI
+        PAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQz
+        AABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMA
+        QCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE
+        4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSe
+        AQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkA
+        ACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAg
+        Es8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLx
+        DAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8A
+        ABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAA
+        kXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJ
+        ZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgG
+        AIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAA
+        iMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBI
+        PAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQz
+        AABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMA
+        QCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE
+        4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSe
+        AQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkA
+        ACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAg
+        Es8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLx
+        DAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8A
+        ABCJZwAAiMQzAABE4hkAACLxDAAAkXgGAIBIPAMAQCSeAQAgEs8AABCJZwAAiMQzAABE4hkAACLxDAAA
+        kXgGAIBIPAMAQCSeAQAgEs8AABDdjef58H13fv5gnAAAwG/uv3n+/HC+uBwnAAAwTMuTx/v58HWcu91+
+        Xt8cA/p6nAAAwDDNF1f75fB+nLemZb2Z5vXdND17NB4BAMDJ2rp4C+ftK40/fuJ8LOq3+2X9tn3TYWZm
+        ZmZ2ytu6eHvj7OUyAAD8s93uJ8mw3wE283OJAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="txtExistencias.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMoAAAAoCAYAAAC/6WUhAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE9SURBVHhe7d0/TgJBFMDhOYZH8BiWXsDSAwLLnyVY0OwV
+        LO0J1YohJkQSJFkZGWKIhc96vy95xe5s+8ts9xLwD8Ph8Kau66fpdPo6Go06Y/o6uYH5fN5UVXVb8jjL
+        kcxms7fVatXtdrsO+iw3sF6vu8Vi0V7Fkm+SHAnwY7PZdKc2XkomKY3H44/D4VCOgYv8K1YySSk/AL8J
+        BQKEAgFCgQChQIBQIEAoECAUCBAKBAgFAoQCAUKBAKFAgFAgQCgQIBQIEAoECAUChAIBQoEAoUCAUCBA
+        KBAgFAgQCgQIBQKEAgFCgQChQIBQIOAqlKqqPo/HYzkCLq5Cqev6uW3bcgRkefNWXlNXMvn+9bpbLpfb
+        /X5fPoF+y4u1mqbZTiaTh5LJ2WAwuD+9fM9XjTF9n7yF7nSbPJY8gL+l9AUz6GaHp6xnCwAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <data name="bunifuLabel4.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Poppins Medium'; font-size: 11pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(15, 23, 42); text-align: left; }</value>
+  </data>
+  <data name="bunifuLabel5.BaseStylesheet" xml:space="preserve">
     <value>#bunifu-label { padding: 0px; font-family: 'Poppins Medium'; font-size: 11pt; width: 100%; height: 100%; font-style: normal; font-weight: normal; text-decoration: none; color: rgb(15, 23, 42); text-align: left; }</value>
   </data>
   <data name="tsActive.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -202,14 +221,13 @@
   </data>
   <data name="txtPrecio.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAANcAAAAoCAYAAABtuW95AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFESURBVHhe7d09bhpRFIbhWYaX4GWk9AZceoHA8DOIFDRs
-        IWV6RIWxLEvISBhpzA23oQshX/c80ilm7rSv7nSnAcKGw+FD13U/p9Pp62g06o0xfz+lm/l8vmrb9rEm
-        dVHCms1mb+v1ut/v9z1wm9LNZrPpF4vF9iqwcmOVsID77Ha7/tzT75pW04zH48/j8ViPgXuU38SaVtOU
-        B+D/EBeEiAtCxAUh4oIQcUGIuCBEXBAiLggRF4SIC0LEBSHighBxQYi4IERcECIuCBEXhIgLQsQFIeKC
-        EHFBiLggRFwQIi4IEReEiAtCxAUh4oIQcUHIVVxt236dTqd6BNzjKq6u635tt9t6BPyrsmGyrHCtaf35
-        LfyxXC7fD4dD/QS4VVkguVqt3ieTyXNN62IwGDydX36UK80Yc/uUDa3nW+ulJgVkNM03Wmv9oJxU9mUA
-        AAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAAKgAAAAoCAYAAABq+7FsAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAE3SURBVHhe7dw9ToVAFIbhWYZLcBmWbsDSBXIZfoMFDVuw
+        tCdUiLkxIZIgCXK807AB5zN5n+QUMJRvhu444F+4XC53VVW9FEXxnqbpzjB/PdZeXded9/4+ZHljcZZl
+        +dH3/T7P8w7EYO0Nw7A3TTOeIrWb0+IEFEzTtB9NvoU8ncuy7Gtd13AMxGe//JCnc/YAKCFQSCNQSCNQ
+        SCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQSCNQ
+        SCNQSCNQSCNQSCNQSCNQSCNQSDsF6r3/3rYtHAHxnQKtqup1HMdwBMRlm5ZtHXjI8/cX/9C27XVZlvAJ
+        EIctUu667prn+VPI8yZJksfj5addrQwTa2zb93F7PocsAWXO/QBSbYx7FYRd7AAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="bunifuLabel3.BaseStylesheet" xml:space="preserve">
@@ -217,18 +235,19 @@
   </data>
   <data name="txtDescripcion.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAdIAAABZCAYAAACKYKWZAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIvSURBVHhe7dgxjtpQAEVRLyNLyDJSZgMps0DAxhiRgoYt
-        TJkeUTFEo0jWIHmQHJz5DZpRiPJSniO9wv7ur74rAOA/mM/nH7qu+9a27eNisRjNzMzsdlMj1+v1rq7r
-        jyWfr6aIrlarH/v9fuz7fgQA3poaeTgcxs1mc7yJ6XQTnSIKANx3Op3Gazu/l4xWVdM0z8MwlGMA4J7p
-        V2/JaFVNDwDA3xNSAAgIKQAEhBQAAkIKAAEhBYCAkAJAQEgBICCkABAQUgAICCkABIQUAAJCCgABIQWA
-        gJACQEBIASAgpAAQEFIACAgpAASEFAACQgoAASEFgICQAkBASAEgIKQAEBBSAAgIKQAEhBQAAkIKAAEh
-        BYCAkAJAQEgBICCkABAQUgAICCkABIQUAAJCCgABIQWAgJACQEBIASAgpAAQEFIACAgpAASEFAACQgoA
-        ASEFgICQAkBASAEgIKQAEBBSAAgIKQAEhBQAAkIKAAEhBYCAkAJAQEgBICCkABAQUgAICCkABIQUAAJC
-        CgABIQWAgJACQEBIASAgpAAQEFIACAgpAASEFAACQgoAASEFgICQAkBASAEgIKQAEBBSAAgIKQAEhBQA
-        AkIKAAEhBYCAkAJA4CakdV2/XC6XcgQA3HMT0q7rHo7HYzkCAP6k7/uxbdvHktHfv3Y/bbfbp/P5XD4B
-        AN4zDMO42+2elsvll5LRV7PZ7PP15c/pqmpmZmbvr2ma5+tt9GvJJwDw76rqF1CLHBMKLWbCAAAAAElF
-        TkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAApEAAABZCAYAAABmD387AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJ+SURBVHhe7dkxattgAIZhHaNH6DE65gIde0DbkmUZZ/Di
+        K2TMbjw5LqEgYlAMStT8oTVNKV/n54FvkH4d4OVXBQAA/20+n3/quu62bduHxWIxmpmZmZlNm/pwvV7v
+        6rr+XNLxzRSQq9Xq+36/H/u+HwEA4N3Uh4fDYdxsNserkJxuIKeABACAvzmdTuNrN96XhKyqpmmehmEo
+        xwAA8LHp93ZJyKqaHgAA4F9EJAAAMREJAEBMRAIAEBORAADERCQAADERCQBATEQCABATkQAAxEQkAAAx
+        EQkAQExEAgAQE5EAAMREJAAAMREJAEBMRAIAEBORAADERCQAADERCQBATEQCABATkQAAxEQkAAAxEQkA
+        QExEAgAQE5EAAMREJAAAMREJAEBMRAIAEBORAADERCQAADERCQBATEQCABATkQAAxEQkAAAxEQkAQExE
+        AgAQE5EAAMREJAAAMREJAEBMRAIAEBORAADERCQAADERCQBATEQCABATkQAAxEQkAAAxEQkAQExEAgAQ
+        E5EAAMREJAAAMREJAEBMRAIAEBORAADERCQAADERCQBATEQCABATkQAAxEQkAAAxEQkAQExEAgAQE5EA
+        AMREJAAAMREJAEBMRAIAEBORAADERCQAADERCQBATEQCABATkQAAxEQkAAAxEQkAQExEAgAQE5EAAMRE
+        JAAAMREJAEBMRAIAEBORAADERCQAADERCQBA7Coi67p+vlwu5QgAAD52FZFd190dj8dyBAAAf+r7fmzb
+        9qEk5M/f2V+22+3j+XwunwAAwC/DMIy73e5xuVx+LQn5Zjab3by+/DFdUZqZmZmZ/b6maZ7atv1W0hEA
+        AFJV9QLBHVN2idyiKQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="bunifuLabel2.BaseStylesheet" xml:space="preserve">
